@@ -4,6 +4,8 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 import org.springframework.security.access.annotation.Secured;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -11,8 +13,11 @@ import codesquad.fineants.domain.member.domain.dto.response.MemberNotification;
 import codesquad.fineants.domain.member.domain.dto.response.MemberNotificationResponse;
 import codesquad.fineants.domain.notification.domain.entity.Notification;
 import codesquad.fineants.domain.notification.repository.NotificationRepository;
+import codesquad.fineants.global.errors.errorcode.MemberErrorCode;
 import codesquad.fineants.global.errors.errorcode.NotificationErrorCode;
+import codesquad.fineants.global.errors.exception.FineAntsException;
 import codesquad.fineants.global.errors.exception.NotFoundResourceException;
+import codesquad.fineants.global.security.oauth.dto.MemberAuthentication;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -26,6 +31,7 @@ public class MemberNotificationService {
 
 	@Secured("ROLE_USER")
 	public MemberNotificationResponse fetchNotifications(Long memberId) {
+		validateMemberAuthorization(memberId);
 		List<Notification> notifications = notificationRepository.findAllByMemberId(memberId);
 		return MemberNotificationResponse.create(
 			notifications.stream()
@@ -34,17 +40,27 @@ public class MemberNotificationService {
 		);
 	}
 
+	private void validateMemberAuthorization(Long memberId) {
+		Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+		Object principal = authentication.getPrincipal();
+		MemberAuthentication memberAuthentication = (MemberAuthentication)principal;
+		if (!memberId.equals(memberAuthentication.getId())) {
+			throw new FineAntsException(MemberErrorCode.FORBIDDEN_MEMBER);
+		}
+	}
+
 	// 입력 받은 알림들 중에서 안 읽은 알람들을 읽음 처리하고 읽은 알림의 등록번호 리스트를 반환
 	@Transactional
 	@Secured("ROLE_USER")
 	public List<Long> readAllNotifications(Long memberId, List<Long> notificationIds) {
+		validateMemberAuthorization(memberId);
 		verifyExistNotifications(memberId, notificationIds);
 
 		// 읽지 않은 알림 조회
 		List<Notification> notifications = notificationRepository.findAllByMemberIdAndIds(memberId, notificationIds)
 			.stream()
 			.filter(notification -> !notification.getIsRead())
-			.collect(Collectors.toList());
+			.toList();
 		log.info("읽지 않은 알림 목록 개수 : {}개", notifications.size());
 
 		// 알림 읽기 처리
@@ -67,6 +83,7 @@ public class MemberNotificationService {
 	@Transactional
 	@Secured("ROLE_USER")
 	public List<Long> deleteAllNotifications(Long memberId, List<Long> notificationIds) {
+		validateMemberAuthorization(memberId);
 		verifyExistNotifications(memberId, notificationIds);
 
 		// 알림 삭제 처리
